// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`form-control-monetary displays error message when error prop is set 1`] = `
<form-control-monetary error="Invalid amount" exportparts="label,input,input-invalid" maskoptions="[object" object]="">
  <mock:shadow-root>
    <label class="form-label" part="label"></label>
    <input class="form-control is-invalid" part="input input-invalid" type="text">
    <div class="invalid-feedback">
      Invalid amount
    </div>
  </mock:shadow-root>
</form-control-monetary>
`;

exports[`form-control-monetary renders correctly with default props 1`] = `
<form-control-monetary exportparts="label,input,input-invalid">
  <mock:shadow-root>
    <label class="form-label" part="label"></label>
    <input class="form-control" part="input undefined" type="text">
  </mock:shadow-root>
</form-control-monetary>
`;
